[tool.poetry]
name = "npne"
version = "0.1.0"
description = "NumPy NeuroEvolution"
authors = ["jinyeom <jinyeom95@gmail.com>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "3.8"
numpy = "^1.19.5"
numba = "^0.52.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
